# bit_manager

./: .gitignore  Cargo.toml  testfile
src/: buffer.rs  conversions.rs  data.rs  io.rs  lib.rs  prelude.rs  test.rs
