[package]
name = "bit_manager"
version = "0.5.3"
authors = ["Scott Taylor <scott11x8@gmail.com>"]

description = "A crate for reading and writing bits from various streams"
keywords = ["bit", "byte", "manager", "read", "write"]
license = "MIT"

include = ["src/buffer.rs", "src/data.rs", "src/io.rs", "src/lib.rs", "src/prelude.rs", "Cargo.toml", "LICENSE"]